--- a/templates/cadastroCostos/cad_mesas_ingreso_Form.html
+++ b/templates/cadastroCostos/cad_mesas_ingreso_Form.html
@@ -168,8 +168,7 @@
    <div class="row clearfix">
     <div class="col-md-12">
       <button id="btnGuardar" type="submit" class="btn btn-success">Guardar</button>
-      <a id="someIDA" class = "btn btn-secondary" href="{% url 'betaNegocio:cad_mesas_listar' %}">Cancelar</a>
-      <button id='btnDeshacer'type="reset" class="btn btn-warning">Deshacer</button>
+      <a id="someIDA" class = "btn btn-secondary" href="{% url 'betaNegocio:cad_costos_ver_mesas' %}">Cancelar</a>
 
     </div>
   </div>
