--- a/templates/cadastroCostos/cad_mesas_Form_Pagar.html
+++ b/templates/cadastroCostos/cad_mesas_Form_Pagar.html
@@ -269,13 +269,13 @@
 
                                 <td></td>
                                 <td></th>
-                                <td>IGV 1</td>
+                                <td>IMP 1</td>
                                 <td id="impuesto1">{{impuesto1|floatformat:2}}</td>
                             </tr>
                             <tr>
                                 <td></td>
                                 <td></td>
-                                <td>IGV 2</td>
+                                <td>IMP 2</td>
                                 <td id="impuesto2">{{impuesto2|floatformat:2}}</td>
                             </tr>
                             <tr>
@@ -305,7 +305,7 @@
            <div id="pagarData">
                <div id="divTotal" class="col-xs-2">
                    <label id="labelTotalPagar">TOTAL</label>
-                   <input align="center" type="number" name="currency" id="monto" class="form-control" value="{{total|floatformat:2}}" />
+                   <input align="center" type="number" name="monto" id="monto" class="form-control" value="{{total|floatformat:2}}" />
                </div>
                <div class="form-group">
                    <label for="selectModoPago">Modo de Pago:</label>
