--- a/templates/cadastroCostos/cad_mesas_ver_mesas.html
+++ b/templates/cadastroCostos/cad_mesas_ver_mesas.html
@@ -15,23 +15,26 @@
     {
         position: relative;
     }
-    .btn
+    .card
     {
         margin: 4px 4px;
+        cursor:pointer;
 
     }
+    .card-header{
+
+font-size:20pt;
+    }
+
+
     </style>
 <table><tr><td><label for="id_fecha_trabajo">Fecha:</label></td><td><input type="date" name="fecha_trabajo" width="50px" class="form-control" readonly id="id_fecha_trabajo"></td></tr></table>
 
-
-
-
-<div id="divJumbo" class="jumbotron">
-
-
-
-
+<div id="divJumbo" class="jumbotron row">
 </div>
+
+<p id="demo"></p>
+
 
 {% endblock %}
 {% block scripts%}
@@ -43,6 +46,7 @@
     <script>
 
     var totalMesas=0;
+    var mesasdata
 
       $("[id^=mesa]").on('click', function() {
         console.log($(this).attr('id'));
@@ -65,8 +69,17 @@
                 console.log(data.mesas)
                 totalMesas = data.mesas;
                 for (var i=1;i<=totalMesas;i++){
-                     $("#divJumbo").append('<a id ="mesa' + i + '" name="mesa' + i + '" class="btn btn-success btn-lg" href="/betaNegocio/nuevoMesaIngreso/'+i+'"  value='+i+' >Mesa: ' + i +'</a>');
+                     $("#divJumbo").append('<div id ="cardmesa' + i + '" class="card text-white bg-secondary mb-2" style="max-width: 20rem;"><div id ="cardheader' + i + '" class="card-header">Mesa: ' + i +'</div><div class="card-body"><p>Valor Consumido:</p>    <h4 id ="h4' + i + '" class="card-title">Mesa Libre</h4><p>Inicio:</p><p id ="inicio' + i + '" class="card-text">Mesa Libre</p></div></div>');
+
                 }
+                 $('.card').on('click', function(event) {
+                        var actual_mesa = $(this).attr("id").replace('cardmesa','');
+                        console.log("MESA: " + actual_mesa)
+                        url = $('#cardmesa'+actual_mesa).attr("href")
+                        console.log(url)
+                        window.location = url;
+                    });
+
 
            }
         });
@@ -87,29 +100,88 @@
             url: 'ajax/estado_mesas/',
             dataType: 'json',
             success: function (data) {
+                mesasdata = data
+                console.log("DATA1Mesa")
+                console.log(mesasdata[1].creado)
                 $.each(data, function(i, obj) {
                     console.log("Estad")
                     console.log(i)
                     console.log(obj)
                     if (obj !== null){
                         if (obj.estado == 'O'){
-                            $('#mesa'+i).removeClass("btn btn-success btn-lg");
-                            $('#mesa'+i).addClass("btn btn-primary btn-lg");
-                            $('#mesa'+i).attr("href", "/betaNegocio/nuevoMesaOrdenIngreso/"+obj.slug)
+
+                            $('#cardmesa'+i).removeClass("card text-white bg-secondary mb-2");
+                            $('#cardmesa'+i).addClass("card text-white bg-primary mb-2");
+                            $('#cardmesa'+i).attr("href", "/betaNegocio/nuevoMesaOrdenIngreso/"+obj.slug)
+                            $('#h4'+i).html("$" + obj.valor_vendido)
+                            tiempocreado(i)
                         }
                         if (obj.estado == 'C'){
-                            $('#mesa'+i).removeClass("btn btn-success btn-lg");
-                            $('#mesa'+i).addClass("btn btn-info btn-lg");
-                            $('#mesa'+i).attr("href", "/betaNegocio/mesaOrdenPagar/"+obj.slug)
+
+                            $('#cardmesa'+i).removeClass("card text-white bg-secondary mb-2");
+                            $('#cardmesa'+i).addClass("card text-white bg-info mb-2");
+                            $('#cardmesa'+i).attr("href", "/betaNegocio/mesaOrdenPagar/"+obj.slug)
+                            $('#h4'+i).html("$" + obj.valor_vendido)
+                            tiempocreado(i)
                         }
+                        if (obj.estado == 'P'){
+
+                            $('#cardmesa'+i).removeClass("card text-white bg-secondary mb-2");
+                            $('#cardmesa'+i).addClass("card text-white bg-success mb-2");
+                            $('#cardmesa'+i).attr("href", "/betaNegocio/nuevoMesaIngreso/"+i)
+                        }
+                    }else{
+
+                        $('#cardmesa'+i).removeClass("card text-white bg-secondary mb-2");
+                        $('#cardmesa'+i).addClass("card text-white bg-success mb-2");
+                        $('#cardmesa'+i).attr("href", "/betaNegocio/nuevoMesaIngreso/"+i)
                     }
+
                 });
+
             }
         });
 
         console.log("OKOKOK");
 
+
      });
+
+    function tiempocreado(mesa){
+
+        var countDownDate = new Date(mesasdata[mesa].creado).getTime();
+        // Update the count down every 1 second
+        var x = setInterval(function() {
+
+            // Get todays date and time
+            var now = new Date().getTime();
+
+            // Find the distance between now and the count down date
+            var distance = now - countDownDate ;
+
+            // Time calculations for days, hours, minutes and seconds
+            var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+            var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+            var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+            var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+            // Output the result in an element with id="demo"
+            //document.getElementById("inicio"+mesa).innerHTML = days + "d " + hours + "h "
+            //+ minutes + "m " + seconds + "s ";
+            document.getElementById("inicio"+mesa).innerHTML = hours + "h " + minutes + "m ";
+
+            // If the count down is over, write some text
+            if (distance < 0) {
+            clearInterval(x);
+            document.getElementById("inicio"+mesa).innerHTML = "EXPIRED";
+            }
+        }, 1000);
+    }
+
+    $('.card').on('click', function(event) {
+        alert('You clicked the Bootstrap');
+    });
+
   </script>
 {% endblock %}
 
