--- a/templates/cadastroCostos/cad_mesas_ver_mesas.html
+++ b/templates/cadastroCostos/cad_mesas_ver_mesas.html
@@ -30,7 +30,7 @@ font-size:20pt;
     </style>
 <table><tr><td><label for="id_fecha_trabajo">Fecha:</label></td><td><input type="date" name="fecha_trabajo" width="50px" class="form-control" readonly id="id_fecha_trabajo"></td></tr></table>
 
-<div id="divJumbo" class="jumbotron row">
+<div id="divJumbo" class="row">
 </div>
 
 <p id="demo"></p>
