--- a/templates/cadastroCostos/cad_mesas_orden_Form.html
+++ b/templates/cadastroCostos/cad_mesas_orden_Form.html
@@ -177,7 +177,7 @@
     document.getElementById("overlay").style.display = "block";
     $(document).ready(function(){
         $.fn.select2.defaults.set( "theme", "bootstrap" );
-        $.fn.select2.defaults.set( "width", "auto" );
+        $.fn.select2.defaults.set( "width", "250px" );
         $.fn.select2.defaults.set( "placeholder", "Seleccione" );
         $.fn.select2.defaults.set( "selectOnClose", "true" );
         $('.js-example-basic-single').select2();
