--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -95,6 +95,14 @@
                     <a class="dropdown-item" href="{% url 'betaNegocio:cad_ing_ret_listar_i' %}">Ingreso Caja</a>
                 </div>
             </li>
+             <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Cierre</a>
+                <div class="dropdown-menu" x-placement="bottom-start" style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(0px, 40px, 0px);">
+                    <a class="dropdown-item" href="{% url 'betaNegocio:cad_estado_eco_fin' %}">Historicos</a>
+                    <a class="dropdown-item" href="#">Cierre</a>
+                    <a class="dropdown-item" href="{% url 'betaNegocio:cad_cierre_eco_fin_actual' %}">Estado</a>
+                </div>
+            </li>
         </ul>
       </div>
     </nav>
