--- a/templates/cadastroCostos/cad_ing_ret_Form_E.html
+++ b/templates/cadastroCostos/cad_ing_ret_Form_E.html
@@ -13,7 +13,7 @@
         <br>
         <button id="btnGuardar" type="submit" class="btn btn-primary">Guardar</button>
         {% block cancelar %}
-            <a id="someIDA" class = "btn btn-secondary" href="{% url 'betaNegocio:cad_ing_ret_listar_i' %}">Cancelar</a>
+            <a id="someIDA" class = "btn btn-secondary" href="{% url 'betaNegocio:cad_ing_ret_listar_e' %}">Cancelar</a>
         {% endblock %}
 
     </form>
