--- a/templates/cadastroCostos/cad_stock_salida_List.html
+++ b/templates/cadastroCostos/cad_stock_salida_List.html
@@ -20,7 +20,7 @@
 
 <br>
 <br>
-<table class="table table-responsive table-bordered table-hover">
+<table class="table table-bordered table-hover">
 	{% csrf_token %}
 
 
